gcc/testsuite/gdc.test/compilable/imports/test18771b.d
module imports.test18771b;

void foo(string) {}
