gcc/testsuite/gdc.test/fail_compilation/imports/fail320b.d
void foo(T)(string){}
void foo(alias a)(){}
